@@ -1,16 +1,27 @@
 # vpn host name
 host=vpn.example.com
+#
 # vpn port (non-default never tested)
 port=443
+#
 # vpn username
 username=jsmith
+#
 # realm - could be taken from web login form
 realm=Very Secure ID
+#
 # Certificate validation, disable for self signed certificates
 verifycert=1
+#
 # set immutable (+i) attribute on /etc/resolv.conf after connect, 1 to enable
 # It works only if jvpn script is running with root UID.
 # set it if your OS or DHCP client overwriting this file
 dnsprotect=0
+#
+# Mode could be ncsvc or ncui. Default is ncsvc use ncui only in case of 
+# problems. Please note that ncui is potentially unsafe, because DSID is listed in 
+# the processlist.
+mode=ncsvc
+#
 # debug - set to 1 to enable
 debug=0
